# osc-sequencer

./: .gitignore  README.md  osc_sequencer.py  pyproject.toml  requirements.txt
data/: example.json
