[tool.poetry]
name = "osc-sequencer"
version = "0.1.0"
description = "OSC message recording and playback"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-osc = "1.7.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
